--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
   background-image: url(img/heroimage.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   height: 800px;
 }
 
@@ -336,7 +337,7 @@ nav {
 }
 
 .borrow_txt {
-  max-width: 60%;
+  width: 60%;
 }
 
 .borrow_heading {
@@ -357,9 +358,10 @@ nav {
 /* section 4 */
 
 .our_food {
+  margin: auto;
   margin-top: 132px;
   margin-bottom: 150px;
-
+  max-width: 1100px;
   text-align: center;
 }
 
@@ -390,6 +392,12 @@ nav {
   align-items: center;
 }
 
+.ham_block {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
 .ham_img {
   margin-left: 30px;
   margin-right: 30px;
@@ -416,6 +424,7 @@ nav {
   background-image: url(img/bar.png);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .menu_content {
@@ -666,4 +675,322 @@ footer {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+@media (max-width: 390px) {
+  .container {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  /* header */
+  nav {
+    display: none;
+  }
+
+  .nav_items {
+    padding-top: 20px;
+  }
+
+  .logo_img {
+    height: 22px;
+  }
+
+  .header_txt {
+    margin-top: 252px;
+    text-align: center;
+  }
+
+  .header_txt_h2 {
+    line-height: 35px;
+    font-size: 30px;
+  }
+
+  .header_txt_h1 {
+    line-height: 46px;
+    font-size: 40px;
+  }
+
+  .header_txt_h3 {
+    line-height: 20px;
+    font-size: 15px;
+  }
+
+  .view_menu {
+    margin-top: 45px;
+  }
+
+  .header_txt_h3:before {
+    display: none;
+  }
+
+  .header_txt_h3:after {
+    display: none;
+  }
+
+  /* main content */
+  /* section 1 */
+
+  .intro {
+    display: flex;
+    flex-direction: column;
+    margin-top: -110px;
+
+    align-items: center;
+  }
+
+  .intro_items {
+    margin-bottom: 14px;
+    width: 290px;
+    height: 275px;
+
+    padding: 20px 13px 20px 13px;
+  }
+
+  .intro_txt {
+    margin-top: 6px;
+
+    font-size: 22px;
+    line-height: 26px;
+  }
+
+  /* section 2 */
+
+  .about_us {
+    margin-top: 75px;
+    padding-bottom: 50px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    color: #000;
+  }
+
+  .about_us_heading {
+    font-size: 40px;
+    width: 50%
+  }
+
+  .about_us_text {
+    width: auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about_txt {
+    max-width: 290px;
+  }
+
+  .about_list {
+    list-style-type: none;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about_list_items {
+    margin-bottom: 20px;
+  }
+
+  .about_us_pictures {
+    display: none;
+  }
+
+  /* section 3 */
+
+
+  .borrow_items {
+    padding-top: 20px;
+    padding-bottom: 30px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .borrow_txt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+  }
+
+  .borrow_heading {
+    font-family: Tinos, serif;
+    font-weight: 400;
+    font-size: 30px;
+  }
+
+  .borrow_text {
+    width: 90%;
+    margin-bottom: 40px;
+  }
+
+  /* section 4 */
+
+  .our_food {
+    margin-top: 63px;
+    margin-bottom: 120px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .our_food_img {
+    margin-top: 70px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .big_img {
+    width: 390px;
+    height: 474px;
+    margin-bottom: 50px;
+  }
+
+  .ham_list {
+    width: auto;
+    list-style-type: none;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .ham_img {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .ham_item {
+    margin-bottom: 87px;
+  }
+
+  .line {
+    display: none;
+  }
+
+  .ham_txt {
+    font-size: 22px;
+    width: 170px;
+  }
+
+  .ham_block {
+    flex-direction: column;
+  }
+
+  /* section 4 */
+
+  .our_menu_heading {
+    margin-bottom: 100px;
+  }
+
+  .menu_content {
+    padding-bottom: 105px;
+    padding-top: 60px;
+  }
+
+  .menu_list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .menu_item {
+    width: 290px;
+    display: none;
+  }
+
+  .menu_item:first-of-type {
+    display: flex;
+  }
+
+  /* section 5 */
+
+  .review_color {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  /* section 6 */
+
+  .food_gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .food_gallery_heading {
+    margin-top: 70px;
+    margin-bottom: 60px;
+    text-align: center;
+  }
+
+  .food_pictures {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .first_column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .second_row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .sec_row_img {
+    margin-bottom: 25px;
+
+    width: 360px;
+  }
+
+  .table2 {
+    margin-top: 0;
+  }
+
+  .table1 {
+    margin-bottom: 25px;
+  }
+
+  .our_cooks {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+
+  .our_cooks_heading {
+    margin-bottom: 60px;
+    margin-top: 60px;
+  }
+
+  .our_cooks_img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cook_item {
+    max-width: 290px;
+    margin-bottom: 20px;
+  }
+
+  .our_cook_list {
+    display: none;
+  }
 }
